# localpm

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILD_AND_TEST.md  CMakeLists.txt  Makefile  README.md  STRUCTURE.md  WARP.md  build.sh  genccmds.sh
apps/: CMakeLists.txt  Makefile  main.cpp
build2/: Makefile
build2/cli/: Makefile
build2/toml-processors/: Makefile
cli/: .clangd  CMakeLists.txt  CMakeLists_backup.txt  INTEGRATION_EXAMPLE.md  Makefile  README.md  WARP.md  compile_commnands.json  registry.hpp
cli/.cache/clangd/index/: main.cpp.58867C1E614F9BB2.idx
cli/include/: commands_all.hpp  registry.hpp
cli/include/commands/: add.hpp  init.hpp  install.hpp  list.hpp
cli/include/localpm/cli/: commands_all.hpp  registry.hpp
cli/include/localpm/cli/commands/: add.hpp  init.hpp
cli/src/: main.cpp
database/: CMakeLists.txt
database/include/: database.hpp
database/src/: database.cpp
file-processing/include/: file_process.hpp
filesystem/: .clangd  CMakeLists.txt  README.md
filesystem/src/: main.cpp
filesystem/src/repo/: dependencies.cpp  packages.cpp
filesystem/src/storage/: migrations.cpp  migrations.hpp  schema.cpp  schema.hpp
filesystem/src_backup/repo/: dependencies.hpp  packages.hpp
filesystem/src_backup/storage/: db.cpp  db.hpp
lockfile/: .clangd  CMakeLists.txt  CMakeLists_backup.txt  Makefile  README.md  lockfile.cc  lockfile.cpp  lockfile.hpp  lockfile_structure.cpp  lockfile_structure.hpp  main  main.cpp  sample.toml
lockfile/include/: lockfile.hpp
lockfile/main.dSYM/Contents/Resources/DWARF/: main
lockfile/src/: lockfile.cpp
manager/: CMakeLists.txt
manager/include/: database.hpp
manager/src/: database.cpp
queries/: init.sql
src/: CMakeLists.txt  Makefile  main.cpp
src/include/logger/: logger.h  logger.hpp
storage/: CMakeLists.txt
storage/include/: storage.hpp
storage/src/: storage.cpp
tests/: CMakeLists.txt  Makefile  test_database.cpp  test_database2.cpp
toml-processors/: .clangd  CMakeLists.txt  QUICKSTART.md  main.cpp
toml-processors/include/: toml_processors.hpp
toml-processors/include/lockfile/: lockfile.hpp
toml-processors/include/manifest/: manifest.hpp  manifest_structure.hpp
toml-processors/src/lockfile/: lockfile.cpp
toml-processors/src/manifest/: manifest.cpp
