# Placeholder for core library if needed
# Currently just providing include directories

# Uncomment if you add source files:
# add_library(localpm_core
#     source1.cpp
#     source2.cpp
# )
# 
# target_include_directories(localpm_core PUBLIC
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
# )
