cmake_minimum_required(VERSION 3.16)

# Example test setup - adjust to your testing framework
# Uncomment and modify when you add tests:

# include(FetchContent)
# FetchContent_Declare(
#     googletest
#     GIT_REPOSITORY https://github.com/google/googletest.git
#     GIT_TAG        v1.14.0
# )
# FetchContent_MakeAvailable(googletest)
#
# add_executable(localpm_tests
#     test_lockfile.cpp
#     test_cli.cpp
# )
#
# target_link_libraries(localpm_tests PRIVATE
#     GTest::gtest_main
#     cli
#     lockfile
# )
#
# include(GoogleTest)
# gtest_discover_tests(localpm_tests)
